--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+#root {
+  max-width: 100%;
+  margin: 0px;
+  padding: 0px;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  text-align: center;
+}
+
+h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 52px;
+  font-style: normal;
+  font-weight: 500;
+}
