--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   max-width: 100%;
   margin: 0px;
   padding: 0px;
-  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -20,6 +20,16 @@ h1 {
   font-family: "Poppins", sans-serif;
   font-size: 52px;
   font-style: normal;
+}
+
+#height-line-title {
+  line-height: 72px;
+}
+
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-size: 32px;
+  line-height: 72px;
 }
 
 input:focus {
