--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 h1 {
   font-family: "Poppins", sans-serif;
   font-size: 52px;
-  font-style: normal;
+  
 }
 
 #height-line-title {
@@ -29,9 +29,12 @@ h1 {
 h2 {
   font-family: "Poppins", sans-serif;
   font-size: 32px;
-  line-height: 72px;
 }
 
 input:focus {
   outline:none !important;
+}
+
+.card {
+  padding: 1rem !important;
 }
